<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_textView_title"
        android:layout_width="399dp"
        android:layout_height="149dp"
        android:gravity="center"
        android:text="@string/title_register"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_editText_username"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:autofillHints="username"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_username_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textView_title" />

    <EditText
        android:id="@+id/register_editText_email"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_username" />

    <EditText
        android:id="@+id/register_editText_firstname"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_firstname_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_email" />

    <EditText
        android:id="@+id/register_editText_lastname"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_lastname_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_firstname" />

    <EditText
        android:id="@+id/register_editText_password"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_lastname" />

    <EditText
        android:id="@+id/register_editText_password_confirm"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_password" />

    <TextView
        android:id="@+id/register_textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_login"
        android:textColor="@color/blue_link"
        app:layout_constraintBottom_toTopOf="@+id/register_button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_password_confirm"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green_79"
        android:gravity="center"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>